# psycho

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
app/: CMakeLists.txt  ansi-color-codes.h  main.c
psycho/: CMakeLists.txt
psycho/include/psycho/: bios-trace.h  bios_trace.h  bus.h  compiler.h  cpu-defs.h  cpu.h  cpu_defs.h  ctx.h  disasm.h  gpu.h  intctrl.h  log.h  sched.h  str.h
psycho/src/: bios-trace.c  bios-trace.h  bios_trace.c  bios_trace.h  bus.c  bus.h  cpu-defs.h  cpu.c  cpu.h  cpu_defs.h  ctx.c  disasm.c  disasm.h  gpu.c  gpu.h  gpu_sw.c  gpu_sw.h  intctrl.c  intctrl.h  log.c  log.h  sched.c  sched.h  str.c  str.h  types.h  util.h
